[gd_scene load_steps=13 format=3 uid="uid://bekhx2vhpfex3"]

[ext_resource type="Theme" uid="uid://bqitn6bx4np8k" path="res://main/ui/theme/theme.tres" id="1_mth0t"]
[ext_resource type="Script" uid="uid://dy8u0prb4movh" path="res://main/ui/menu/inspection/inspection_menu.gd" id="2_mth0t"]
[ext_resource type="Shader" uid="uid://drfp5s1djbnr3" path="res://main/ui/title_background.gdshader" id="3_kn5ta"]
[ext_resource type="Texture2D" uid="uid://qemvk0srnrrq" path="res://main/ui/icons/x.png" id="4_wyglj"]
[ext_resource type="PackedScene" uid="uid://bsjbwo2ih2fke" path="res://main/ui/menu/recording/chart/chart.tscn" id="5_c0lnj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bsumw"]
bg_color = Color(0.0745098, 0.0705882, 0.0823529, 1)

[sub_resource type="Gradient" id="Gradient_jofbb"]
colors = PackedColorArray(0.16875, 0.0625, 0.25, 1, 1, 0.88, 0.928, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_re7it"]
gradient = SubResource("Gradient_jofbb")
fill_from = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_jlx0t"]
interpolation_color_space = 2
colors = PackedColorArray(0.124431, 0.238785, 0.160219, 1, 0.373517, 0.182213, 0.138931, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2mv05"]
gradient = SubResource("Gradient_jlx0t")
width = 128
height = 128
fill_from = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e88nu"]
shader = ExtResource("3_kn5ta")
shader_parameter/gradient = SubResource("GradientTexture2D_2mv05")
shader_parameter/fractal_gradient = SubResource("GradientTexture2D_re7it")
shader_parameter/speed = 0.02
shader_parameter/fractal_mix = 0.23

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwcvl"]
content_margin_left = 128.0
content_margin_top = 128.0
content_margin_right = 128.0
content_margin_bottom = 90.0
bg_color = Color(1, 1, 1, 0.819608)
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[node name="InspectionMenu" type="PanelContainer" node_paths=PackedStringArray("close_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mth0t")
theme_override_styles/panel = SubResource("StyleBoxFlat_bsumw")
script = ExtResource("2_mth0t")
y = 10
close_button = NodePath("VBoxContainer/TitleContainer/HBoxContainer/CloseButton")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TitleContainer" type="PanelContainer" parent="VBoxContainer"]
material = SubResource("ShaderMaterial_e88nu")
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fwcvl")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TitleContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/TitleContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 48
text = "Recording Result"

[node name="CloseButton" type="Button" parent="VBoxContainer/TitleContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
icon = ExtResource("4_wyglj")
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="TopSpacing" type="Control" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="DateLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.45098, 0.427451, 0.470588, 1)
text = "Date:"
autowrap_mode = 2

[node name="Render" type="TextureRect" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
expand_mode = 5

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/Render"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.133333)

[node name="Chart" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_c0lnj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0

[node name="ProcessedChart" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("5_c0lnj")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
peakColor = Color(0.281833, 0.89, 0, 1)
peakLength = 0
peakLineWidth = 16.0

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer/ProcessedChart"]
modulate = Color(1, 1, 1, 0.372549)
layout_mode = 2
size_flags_vertical = 0
text = "(resampled and smoothened signal)"

[node name="ScoreLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Score:"
autowrap_mode = 2

[node name="HeartRateLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Heart Rate:"
autowrap_mode = 2

[node name="HeartRateVariabilityLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Heart Rate Variability:"
autowrap_mode = 2

[node name="FourierPulseScoresLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Pulse Scores:"
autowrap_mode = 2

[node name="LinearSlopePulseScoresLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Pulse Scores:"
autowrap_mode = 2

[node name="RisingEdgeAreaPulseScoresLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Pulse Scores:"
autowrap_mode = 2

[node name="PeakDetectionPulseScoresLabel" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Pulse Scores:"
autowrap_mode = 2

[node name="Description" type="Label" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.449555, 0.4277, 0.47, 1)
text = "Your heart health score is a heuristic based on the shape of your pulse waveform. It is not conclusive evidence of your overall heart health. Use this information with caution and consult with a health care professional if you are concerned about your results."
autowrap_mode = 2

[node name="BottomgSpacing" type="Control" parent="VBoxContainer/VBoxContainer/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="AdvancedButtonContainer" type="MarginContainer" parent="VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="AdvancedButton" type="Button" parent="VBoxContainer/VBoxContainer/MarginContainer/AdvancedButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
text = "Show Advanced Info"
